2010-01-07
    * Renamed to 'drumstick' and moved to a new project repository 

2009-12-27
    * Release 0.2.0
    * API changes:
      SequencerInputThread::start() added a priority parameter
      SequencerEvent::isChannel() new static method
      SequencerOutputThread::stopped() method removed, converted into a signal
      SequencerOutputThread::start() added a priority parameter
      SequencerOutputThread::shutupSound() method removed
      SequencerOutputThread::stopRequested() method added
      QSmfPrivate class added
      QSmf::writeMetaEvent() new method overload
      QSmf::getTextCodec() new method
      QSmf::setTextCodec() new method
      QSmf::signalSMFVariable() signal dropped
      QSmf::signalSMFMetaUnregistered() signal added
      Subscriber::operator==() removed unimplemented operator prototype

2009-08-27
    * Public release 0.1.0

2008-12-29 0.0.2pre5
    * Snapshot included in kmetronome-0.9.0 and kmidimon-0.6.0

2008-11-09 0.0.2pre1
    * Initial pre-release

2008-05-12 0.0.1
    * Development started