@@ -50,8 +50,8 @@ SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_admin")
 
 # DRUMSTICK version string
 SET (VERSION_MAJOR "0")
-SET (VERSION_MINOR "2")
-SET (VERSION_PATCH "99")
+SET (VERSION_MINOR "3")
+SET (VERSION_PATCH "0")
 SET (VERSION_SUFFIX "svn")
 SET (VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${VERSION_SUFFIX})
 ADD_DEFINITIONS(-D'VERSION="${VERSION}"')
@@ -99,18 +99,15 @@ ENDIF(PKG_CONFIG_FOUND)
 SET(HAVE_ALSA FALSE)
 
 # Check for ALSA 1.0.0
-PKG_CHECK_MODULES(ALSA REQUIRED alsa>=1.0.0)
+PKG_CHECK_MODULES(ALSA alsa>=1.0.0)
 IF(ALSA_FOUND)
     SET(HAVE_ALSA TRUE)
     ADD_DEFINITIONS(-DHAVE_ALSA)
     SET(ALSA_LIBS ${ALSA_LIBRARIES})
-    #MESSAGE("ALSA_LIBS: ${ALSA_LIBS}")
     LIST(APPEND ALSA_LIB_DIR ${ALSA_LIBRARY_DIRS} ${ALSA_LIBDIR})
-    #MESSAGE("ALSA_LIB_DIR: ${ALSA_LIB_DIR}")
     LIST(APPEND ALSA_INC_DIR ${ALSA_INCLUDE_DIRS} ${ALSA_INCLUDEDIR})
-    #MESSAGE("ALSA_INC_DIR: ${ALSA_INC_DIR}")
 ELSE(ALSA_FOUND)
-    MESSAGE(FATAL_ERROR "Please install the required package. Aborting")
+    MESSAGE(STATUS "Warning: ALSA library not found.")
 ENDIF(ALSA_FOUND)
 
 LINK_DIRECTORIES(
