@@ -35,12 +35,15 @@ ENDIF(USE_PCH)
 
 
 ADD_SUBDIRECTORY(buildsmf)
-ADD_SUBDIRECTORY(dumpmid)
 ADD_SUBDIRECTORY(dumpsmf)
-ADD_SUBDIRECTORY(playsmf)
-ADD_SUBDIRECTORY(smfplayer)
-ADD_SUBDIRECTORY(sysinfo)
-ADD_SUBDIRECTORY(testevents)
-ADD_SUBDIRECTORY(timertest)
-ADD_SUBDIRECTORY(vpiano)
-ADD_SUBDIRECTORY(metronome)
+
+IF(ALSA_FOUND)
+    ADD_SUBDIRECTORY(dumpmid)
+    ADD_SUBDIRECTORY(playsmf)
+    ADD_SUBDIRECTORY(smfplayer)
+    ADD_SUBDIRECTORY(sysinfo)
+    ADD_SUBDIRECTORY(testevents)
+    ADD_SUBDIRECTORY(timertest)
+    ADD_SUBDIRECTORY(vpiano)
+    ADD_SUBDIRECTORY(metronome)
+ENDIF(ALSA_FOUND)
