@@ -21,7 +21,7 @@ ENDIF(USE_PCH)
 TARGET_LINK_LIBRARIES(drumstick-buildsmf
     ${QT_LIBRARIES} 
     ${ALSA_LIBS} 
-    drumstick
+    drumstick-file
 )
 
 INSTALL(TARGETS drumstick-buildsmf 
