@@ -1,3 +1,6 @@
+2010-02-17
+    * Split: drumstick-file and drumstick-alsa 
+
 2010-01-07
     * Renamed to 'drumstick' and moved to a new project repository 
 
